--- a/custom-software-development.html
+++ b/custom-software-development.html
@@ -110,7 +110,7 @@
                                     <ul class="nav navbar-nav mx-auto">
                                         <!-- Home -->
                                         <li class="nav-item">
-                                            <a class="nav-link active" href="index.html" aria-label="Homepage">Home</a>
+                                            <a class="nav-link " href="index.html" aria-label="Homepage">Home</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="about-us.html" aria-label="About AangSoftware">About Us</a>
@@ -120,7 +120,7 @@
                                             <ul class="dropdown-menu" aria-label="Services">
                                                 <li><a href="custom-software-development.html">Custom Software Development</a></li>
                                                 <li><a href="web-mobileapp-development.html">Web and Mobile App Development</a></li>
-                                                <li><a href="enterprise-software-development.html">Enterprise Software Solutions</a></li>
+                                                <li><a href="Enterprise-software-development.html">Enterprise Software Solutions</a></li>
                                                 <li><a href="saas-development.html">SaaS (Software as a Service) Development</a></li>
                                                 <li><a href="api-development-integration.html">API Development and Integration</a></li>
                                                 <li><a href="ux-ui-development.html">UX/UI Design</a></li>
