--- a/software-maintenance-and-Support.html
+++ b/software-maintenance-and-Support.html
@@ -107,7 +107,7 @@
                                     <ul class="nav navbar-nav mx-auto">
                                         <!-- Home -->
                                         <li class="nav-item">
-                                            <a class="nav-link active" href="index.html" aria-label="Homepage">Home</a>
+                                            <a class="nav-link " href="index.html" aria-label="Homepage">Home</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="about-us.html" aria-label="About AangSoftware">About Us</a>
@@ -353,7 +353,7 @@
         <!--footer start-->
 
         <footer class="footer" data-bg-img="images/bg/02.png" aria-labelledby="footer-title" style="    margin-top: 89px;">
-            <div class="container" style="margin-top: -11rem;">
+            <div class="container" style="margin-top: -19rem;">
                 <div class="primary-footer">
                     <div class="row">
                         <div class="col-lg-5 col-md-12">
@@ -398,7 +398,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="col-lg-7 col-md-12 mt-6 mt-lg-0" style="margin-top: -11rem;">
+                        <div class="col-lg-7 col-md-12 mt-6 mt-lg-0" style="margin-top: -19rem;">
                             <h5>Information</h5>
                             <div class="row">
                                 <div class="col-lg-4 col-md-4 mt-5 mt-md-0 footer-menu">
