--- a/web-mobileapp-development.html
+++ b/web-mobileapp-development.html
@@ -107,7 +107,7 @@
                                     <ul class="nav navbar-nav mx-auto">
                                         <!-- Home -->
                                         <li class="nav-item">
-                                            <a class="nav-link active" href="index.html" aria-label="Homepage">Home</a>
+                                            <a class="nav-link " href="index.html" aria-label="Homepage">Home</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="about-us.html" aria-label="About AangSoftware">About Us</a>
@@ -117,7 +117,7 @@
                                             <ul class="dropdown-menu" aria-label="Services">
                                                 <li><a href="custom-software-development.html">Custom Software Development</a></li>
                                                 <li><a href="web-mobileapp-development.html">Web and Mobile App Development</a></li>
-                                                <li><a href="enterprise-software-development.html">Enterprise Software Solutions</a></li>
+                                                <li><a href="Enterprise-software-development.html">Enterprise Software Solutions</a></li>
                                                 <li><a href="saas-development.html">SaaS (Software as a Service) Development</a></li>
                                                 <li><a href="api-development-integration.html">API Development and Integration</a></li>
                                                 <li><a href="ux-ui-development.html">UX/UI Design</a></li>
@@ -189,7 +189,7 @@
 
         <!--body content start-->
 
-        <div class="page-content">
+        <div class="page-content" style="margin-top: -129px">
 
             <section>
                 <div class="container">
@@ -351,7 +351,7 @@
         <!--footer start-->
 
         <footer class="footer" data-bg-img="images/bg/02.png" aria-labelledby="footer-title" style="    margin-top: 89px;">
-            <div class="container" style="margin-top: -11rem;">
+            <div class="container" style="margin-top: -19rem;">
                 <div class="primary-footer">
                     <div class="row">
                         <div class="col-lg-5 col-md-12">
@@ -396,7 +396,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="col-lg-7 col-md-12 mt-6 mt-lg-0" style="margin-top: -11rem;">
+                        <div class="col-lg-7 col-md-12 mt-6 mt-lg-0" style="margin-top: -19rem;">
                             <h5>Information</h5>
                             <div class="row">
                                 <div class="col-lg-4 col-md-4 mt-5 mt-md-0 footer-menu">
